--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
 		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
+		"@popperjs/core": "^2.11.6",
+		"bootstrap": "^5.2.1",
 		"core-js": "^3.8.3",
-		"vue": "^3.2.13"
+		"vue": "^3.2.13",
+		"vue-router": "^4.1.5"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.16",
@@ -34,7 +37,9 @@
 		"parserOptions": {
 			"parser": "@babel/eslint-parser"
 		},
-		"rules": {}
+		"rules": {
+			"vue/no-unused-components": "off"
+		}
 	},
 	"browserslist": [
 		"> 1%",
